--- a/docs/content/quickstart/exploring.mdx
+++ b/docs/content/quickstart/exploring.mdx
@@ -9,5 +9,6 @@ Head over to the [Hack Club Slack](https://hackclub.slack.com) and run `/bag me`
 
 Afterwards check out these channels:
 
-* [#market](https://app.slack.com/client/T0266FRGM/C06GA0PSXC5)
-* [#craftery](https://app.slack.com/client/T0266FRGM/C06P09REBK4)
+- [#market](https://app.slack.com/client/T0266FRGM/C06GA0PSXC5)
+- [#craftery](https://app.slack.com/client/T0266FRGM/C06P09REBK4)
+- [#general-store](https://app.slack.com/client/T0266FRGM/C06Q8G95TQU)
